<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/black">

    <Button
        android:id="@+id/button_sugnup"
        style="@style/ButtonShape"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/white"
        android:text="@string/sign_up"
        android:textColor="@color/text_black"
        app:layout_constraintEnd_toStartOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_login"
        style="@style/ButtonShape"
        android:layout_width="0dp"
        android:layout_height="56dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="16dp"
        android:text="@string/log_in"
        android:textColor="@color/text_black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button_sugnup"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view2"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/divider_light"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_sugnup"
        app:layout_constraintTop_toBottomOf="@+id/button_sugnup" />

    <TextView
        android:id="@+id/textView5"
        style="@style/TextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/footer_help"
        android:textAllCaps="true"
        android:textColor="@color/text_white"
        android:textSize="32sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintStart_toStartOf="@+id/view2"
        app:layout_constraintTop_toBottomOf="@+id/view2" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="@+id/view2"
        app:layout_constraintTop_toTopOf="@+id/textView5"
        app:srcCompat="@drawable/ic_arrow_down" />

    <View
        android:id="@+id/view3"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/divider_light"
        app:layout_constraintEnd_toEndOf="@+id/button_login"
        app:layout_constraintStart_toStartOf="@+id/button_sugnup"
        app:layout_constraintTop_toBottomOf="@+id/textView5" />

    <TextView
        android:id="@+id/textView6"
        style="@style/TextViewMontserratRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:layout_marginBottom="24dp"
        android:text="@string/footer_share_the_love"
        android:textAllCaps="true"
        android:textColor="@color/text_white"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintStart_toStartOf="@+id/view3"
        app:layout_constraintTop_toBottomOf="@+id/view3" />

    <ImageView
        android:id="@+id/image_inst"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="@+id/view3"
        app:layout_constraintTop_toTopOf="@+id/textView6"
        app:srcCompat="@drawable/ic_inst" />

    <ImageView
        android:id="@+id/image_twitter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_inst"
        app:layout_constraintEnd_toStartOf="@+id/image_inst"
        app:layout_constraintTop_toTopOf="@+id/image_inst"
        app:srcCompat="@drawable/ic_twitter" />

    <ImageView
        android:id="@+id/image_pinterest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_twitter"
        app:layout_constraintEnd_toStartOf="@+id/image_twitter"
        app:layout_constraintTop_toTopOf="@+id/image_twitter"
        app:srcCompat="@drawable/ic_pinterest" />

    <ImageView
        android:id="@+id/image_fb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/image_pinterest"
        app:layout_constraintEnd_toStartOf="@+id/image_pinterest"
        app:layout_constraintTop_toTopOf="@+id/image_pinterest"
        app:srcCompat="@drawable/ic_fb" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ImageView
            android:layout_width="39dp"
            android:layout_height="16dp"
            android:layout_marginStart="16dp"
            android:src="@drawable/ic_fixel" />

        <TextView
            style="@style/TextViewMontserratBold"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:text="@string/_2020"
            android:textColor="@color/text_black" />

        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1" />

        <ImageView
            android:layout_width="43dp"
            android:layout_height="14dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_visa" />

        <ImageView
            android:layout_width="24dp"
            android:layout_height="17dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_mastercard" />

        <ImageView
            android:layout_width="54dp"
            android:layout_height="14dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_amex" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>